# logzmq

./: CMakeLists.txt  README.md  logger.cpp  logger.h  logzmq.cpp  logzmq.h  main.cpp  zmq_publisher.cpp  zmq_subscriber.cpp
